--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 CI= npm run build
-REACT_APP_GAME_NAME=Reactle
-REACT_APP_GAME_DESCRIPTION=A daily word puzzle
+REACT_APP_GAME_NAME=Word Seekler
+REACT_APP_GAME_DESCRIPTION=Uma palavra diária mais difícil
 REACT_APP_LOCALE_STRING=
