--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ CI= npm run build
 REACT_APP_GAME_NAME=Word Seekler
 REACT_APP_GAME_DESCRIPTION=Uma palavra diária mais difícil
 REACT_APP_LOCALE_STRING=
+REACT_APP_GOOGLE_MEASUREMENT_ID=G-V8D5TRHNL8
